--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,27 @@
+domain: technicallytechnickl.github.io
+url: https://technicallytechnickl.github.io
+
 remote_theme: pages-themes/architect@v0.2.0
+
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+collections:
+  authors:
+    output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
