--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 domain: technicallytechnickl.github.io
 url: https://technicallytechnickl.github.io
-baseurl: /docs
+baseurl: /writing
 
 remote_theme: pages-themes/architect@v0.2.0
 
