--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,6 +6,8 @@ remote_theme: pages-themes/architect@v0.2.0
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-feed
+- jekyll-include-cache
 
 collections:
   authors:
