--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,5 +2,6 @@ source "https://rubygems.org"
 
 gem "github-pages", group: :jekyll_plugins
 gem "kramdown-parser-gfm"
+gem 'jekyll-include-cache'
 
 #gem "webrick", "~> 1.8"
