--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@ domain: technicallytechnickl.github.io
 url: https://technicallytechnickl.github.io
 baseurl: /writing
 
-remote_theme: pages-themes/dinky@v0.2.0
+remote_theme: pages-themes/tactile@v0.2.0
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
